--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mandar | IT engineer & Software Developer</title>
+    <title>Mandar | Software Developer & IT Engineer</title>
 
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="style.css">
@@ -20,7 +20,7 @@
             <div class="profile-section">
                 <div class="avatar">A</div>
                 <h1 class="name">Hello, I'm Mandar!</h1>
-                <p class="title">Software Developer & ML Engineer</p>
+                <p class="title">Software Developer & IT Engineer</p>
             </div>
 
             <div class="description">
